1.2.6.8
   - Tweak to force association end roles to be correct when roles or multiplicities change
   - Fixed background color on attribute glyph in model explorer
   - Fixed foreground color on enum value glyph on design surface
   - Hid comments in model explorer because they just cluttered up the tree.
   - Double-clicking a class or enum on the designer or model explorer opens the generated code file, if present

1.2.6.7
   - An entity's concurrency token property is no longer a required parameter in its constructor (https://github.com/msawczyn/EFDesigner/issues/24)
   - Simplified cascade delete settings in property editor for associations
   - Fixed bad code generation in EFCore for cascade delete overrides (https://github.com/msawczyn/EFDesigner/issues/22)
   - Missing files when generating code for .NET Core projects fixed
   - Tightened up and swatted some bugs in INotifyPropertyChanged handling. Added documentation to doc site for this feature (following up on https://github.com/msawczyn/EFDesigner/issues/23)
   - Ensured multiline editing was available in property window for those properties that made sense

1.2.6.6
   - Deleting a generalization or superclass gives the choice of pushing attributes and associations down to the former child class(es)

1.2.6.5
   - Comment elements now wrap the text
   - Multiline editor available in property window for element comment descriptions and Comment element text
   - Xml format changed for .efmodel file - can't be loaded by any version < 1.2.6.3
   - Support for automatic migration to new model xml formats

1.2.6.2
   - Added XML docs to DbContext, DatabaseInitializer and DbMigrationsConfiguration
   - Enabled drag and drop reordering of enum values and class properties
   - Gave some color to the enum value glyph in the model explorer - it was so boring!
   - Class properties and enum values with warnings now show a warning icon on the design surface