@@ -6,7 +6,8 @@ namespace Sawczyn.EFDesigner.EFModel
    {
       public static string GetRelativeFileName(this ModelClass modelClass)
       {
-         return Path.Combine(modelClass.OutputDirectory, modelClass.Name + ".cs");
+         string outputDirectory = modelClass.OutputDirectory ?? modelClass.ModelRoot.EntityOutputDirectory;
+         return Path.Combine(outputDirectory, $"{modelClass.Name}.{modelClass.ModelRoot.FileNameMarker}.cs");
       }
    }
 }
