@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<modelRoot xmlns:dm0="http://schemas.microsoft.com/VisualStudio/2008/DslTools/Core" dslVersion="1.2.6.5" Id="cba47279-0950-4257-bb2c-e4d5e72a52a4" entityContainerName="SandboxModel" namespace="Sandbox" automaticMigrationsEnabled="false" entityOutputDirectory="Generated\Entities" contextOutputDirectory="Generated\Context" enumOutputDirectory="Generated\Entities" entityFrameworkVersion="EFCore" transformOnSave="false" showCascadeDeletes="false" databaseType="None" structOutputDirectory="Generated\Entities" summary="xxx" xmlns="http://schemas.microsoft.com/dsltools/EFModel">
+<modelRoot xmlns:dm0="http://schemas.microsoft.com/VisualStudio/2008/DslTools/Core" dslVersion="1.2.6.8" Id="cba47279-0950-4257-bb2c-e4d5e72a52a4" entityContainerName="SandboxModel" namespace="Sandbox" automaticMigrationsEnabled="false" entityOutputDirectory="Generated\Entities" contextOutputDirectory="Generated\Context" enumOutputDirectory="Generated\Entities" entityFrameworkVersion="EFCore" transformOnSave="false" showCascadeDeletes="false" databaseType="None" structOutputDirectory="Generated\Entities" summary="xxx" xmlns="http://schemas.microsoft.com/dsltools/EFModel">
   <enums>
     <modelRootHasEnums Id="8d340ffc-3e04-47be-9857-f06b27b6014c">
       <modelEnum Id="8efadc40-af98-4c15-99c0-88a61621c1e7" namespace="Sandbox" name="Enum1ab" outputDirectory="Generated\Entities">
