@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<eFModelDiagram dslVersion="1.2.6.5" Id="8f32435a-d39e-49b2-8d4d-4297303a0553" absoluteBounds="0, 0, 11, 8.5" name="Sandbox">
+<eFModelDiagram dslVersion="1.2.6.8" Id="8f32435a-d39e-49b2-8d4d-4297303a0553" absoluteBounds="0, 0, 11, 8.5" name="Sandbox">
   <modelRootMoniker Id="cba47279-0950-4257-bb2c-e4d5e72a52a4" />
   <nestedChildShapes>
     <classShape Id="81d3a77d-2f65-45b1-b571-a2518dc4ddd3" absoluteBounds="3.5, 1.125, 3.75, 1.4285953776041667" fillColor="0, 122, 204" textColor="White" outlineColor="Black" outlineDashStyle="Solid" visible="true" outlineThickness="0.01">
@@ -14,10 +14,10 @@
         <elementListCompartment Id="c29e2d82-a694-4f65-86b1-86ba95d47c65" absoluteBounds="0.5149999999999999, 1.31, 1.4700000000000002, 0.8262939453125" name="ValuesCompartment" titleTextColor="Black" itemTextColor="Black" />
       </nestedChildShapes>
     </enumShape>
-    <enumShape Id="17d23475-3330-4c0e-b39c-be098a2fcaaf" absoluteBounds="0.5, 0.5, 1.5, 1.2362939453125001" fillColor="Gray" textColor="White" outlineColor="Black" visible="true" outlineThickness="0.01" outlineDashStyle="Solid">
+    <enumShape Id="17d23475-3330-4c0e-b39c-be098a2fcaaf" absoluteBounds="1.375, 3.5, 1.5, 1.2362939453125001" fillColor="Gray" textColor="White" outlineColor="Black" visible="true" outlineThickness="0.01" outlineDashStyle="Solid">
       <modelEnumMoniker Id="aeb214f2-9298-48e3-8b57-14abc29411a2" />
       <nestedChildShapes>
-        <elementListCompartment Id="eba9fc33-1051-4354-b175-de62573fd8d3" absoluteBounds="0.51499999999999968, 0.80999999999999961, 1.4700000000000002, 0.8262939453125" name="ValuesCompartment" titleTextColor="Black" itemTextColor="Black" />
+        <elementListCompartment Id="eba9fc33-1051-4354-b175-de62573fd8d3" absoluteBounds="1.3899999999999997, 3.8099999999999996, 1.4700000000000002, 0.8262939453125" name="ValuesCompartment" titleTextColor="Black" itemTextColor="Black" />
       </nestedChildShapes>
     </enumShape>
     <classShape Id="45c34e1b-d55f-487e-b86e-d812fe954448" absoluteBounds="3.875, 3.125, 1.5, 0.65938964843750014" fillColor="0, 122, 204" textColor="White" outlineColor="Black" outlineDashStyle="Solid" visible="true" outlineThickness="0.01">
@@ -38,21 +38,21 @@
         <elementListCompartment Id="5ea4fcd7-8549-47ef-8406-d9ce58876ee5" absoluteBounds="3.89, 4.6850000000000005, 1.4700000000000002, 0.2493896484375" name="AttributesCompartment" titleTextColor="Black" itemTextColor="Black" />
       </nestedChildShapes>
     </classShape>
-    <generalizationConnector Id="8b417c13-c404-4b03-b400-d55ca80f3534" edgePoints="[(4.625 : 3.7843896484375); (4.625 : 4.375)]" fixedFrom="Algorithm" fixedTo="Algorithm">
+    <generalizationConnector Id="8b417c13-c404-4b03-b400-d55ca80f3534" edgePoints="[(4.625 : 3.7843896484375); (4.625 : 4.375)]" fixedFrom="NotFixed" fixedTo="NotFixed">
       <generalizationMoniker Id="2212e0c5-98ee-48e4-bb5a-291d5c26f7f1" />
       <nodes>
         <classShapeMoniker Id="45c34e1b-d55f-487e-b86e-d812fe954448" />
         <classShapeMoniker Id="81cfd961-7207-443f-bfa3-4ff17cf1a299" />
       </nodes>
     </generalizationConnector>
-    <generalizationConnector Id="36f72151-e8d3-4b1b-8b4b-dada0dd15e1e" edgePoints="[(4.625 : 2.55359537760417); (4.625 : 3.125)]" fixedFrom="Algorithm" fixedTo="Algorithm">
+    <generalizationConnector Id="36f72151-e8d3-4b1b-8b4b-dada0dd15e1e" edgePoints="[(4.625 : 2.55359537760417); (4.625 : 3.125)]" fixedFrom="NotFixed" fixedTo="NotFixed">
       <generalizationMoniker Id="f672fbe5-9943-45bf-9624-9b42ca094fae" />
       <nodes>
         <classShapeMoniker Id="81d3a77d-2f65-45b1-b571-a2518dc4ddd3" />
         <classShapeMoniker Id="45c34e1b-d55f-487e-b86e-d812fe954448" />
       </nodes>
     </generalizationConnector>
-    <generalizationConnector Id="7169bc58-9ac0-47f1-b7ec-57a72c744af7" edgePoints="[(6.5625 : 2.55359537760417); (6.5625 : 3.125)]" fixedFrom="Algorithm" fixedTo="Algorithm">
+    <generalizationConnector Id="7169bc58-9ac0-47f1-b7ec-57a72c744af7" edgePoints="[(6.5625 : 2.55359537760417); (6.5625 : 3.125)]" fixedFrom="NotFixed" fixedTo="NotFixed">
       <generalizationMoniker Id="1f9a7dcb-14ae-4ecb-8c72-c53618b36f39" />
       <nodes>
         <classShapeMoniker Id="81d3a77d-2f65-45b1-b571-a2518dc4ddd3" />
