@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<eFModelDiagram dslVersion="1.2.6.7" Id="203cab2b-d74b-442f-8046-8576186cae53" absoluteBounds="0, 0, 13.375, 15.375" name="AllFeatureModel">
+<eFModelDiagram dslVersion="1.2.6.8" Id="203cab2b-d74b-442f-8046-8576186cae53" absoluteBounds="0, 0, 13.375, 15.375" name="AllFeatureModel">
   <modelRootMoniker Id="cba47279-0950-4257-bb2c-e4d5e72a52a4" />
   <nestedChildShapes>
     <classShape Id="d7e831f1-0efa-444f-90ba-b4df87d9827b" absoluteBounds="0.75, 6.75, 1.5, 3.5439111328125" fillColor="0, 122, 204" textColor="White" outlineColor="Black" outlineDashStyle="Solid" visible="true" outlineThickness="0.01">
@@ -86,10 +86,10 @@
         <elementListCompartment Id="e761303c-0d4a-41ea-8e22-73b741617d65" absoluteBounds="11.64, 9.31, 1.4700000000000002, 0.63399251302083326" name="AttributesCompartment" titleTextColor="Black" itemTextColor="Black" />
       </nestedChildShapes>
     </classShape>
-    <classShape Id="19e72206-2348-4307-ad8f-01a197ab75c6" absoluteBounds="8.875, 2.125, 1.5, 0.851691080729168" fillColor="0, 122, 204" textColor="White" outlineColor="OrangeRed" outlineDashStyle="Dot" visible="true" outlineThickness="0.03">
+    <classShape Id="19e72206-2348-4307-ad8f-01a197ab75c6" absoluteBounds="8.875, 2.125, 1.5, 0.85169108072916666" fillColor="0, 122, 204" textColor="White" outlineColor="OrangeRed" outlineDashStyle="Dot" visible="true" outlineThickness="0.03">
       <modelClassMoniker Id="f4d8acff-5f14-4838-9ac4-247bf577fcb6" />
       <nestedChildShapes>
-        <elementListCompartment Id="619619c6-59e1-4699-8237-9b1c860d372d" absoluteBounds="8.89, 2.4350000000000005, 1.4700000000000002, 0.44169108072916657" name="AttributesCompartment" titleTextColor="Black" itemTextColor="Black" />
+        <elementListCompartment Id="619619c6-59e1-4699-8237-9b1c860d372d" absoluteBounds="8.89, 2.435, 1.4700000000000002, 0.44169108072916657" name="AttributesCompartment" titleTextColor="Black" itemTextColor="Black" />
       </nestedChildShapes>
     </classShape>
     <classShape Id="a7713484-2dd3-4cae-8280-ef35b063cafd" absoluteBounds="8.25, 7.5, 1.5, 0.65938964843750014" fillColor="0, 122, 204" textColor="White" outlineColor="OrangeRed" outlineDashStyle="Dot" visible="true" outlineThickness="0.03">
@@ -263,7 +263,7 @@
         <classShapeMoniker Id="5e38967e-ee79-43ee-aee8-acc9bf3ce0e0" />
       </nodes>
     </generalizationConnector>
-    <generalizationConnector Id="396e83ea-939a-4e8a-80e5-45c24e6c2a67" edgePoints="[(9.625 : 2.97669108072917); (9.625 : 3.75)]" fixedFrom="NotFixed" fixedTo="NotFixed">
+    <generalizationConnector Id="396e83ea-939a-4e8a-80e5-45c24e6c2a67" edgePoints="[(9.625 : 2.97669108072917); (9.625 : 3.75)]" fixedFrom="Algorithm" fixedTo="Algorithm">
       <generalizationMoniker Id="cc9d11d1-b90d-4ba3-a991-6d233f64b212" />
       <nodes>
         <classShapeMoniker Id="19e72206-2348-4307-ad8f-01a197ab75c6" />
